--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import "./lib/scss/variables";
-@import "./lib/scss/bootstrap/bootstrap";
-@import "./lib/scss/bootswatch";
-@import "./reset";
+@import './lib/scss/variables';
+@import './lib/scss/bootstrap/bootstrap';
+@import './lib/scss/bootswatch';
+@import './reset';
+@import './custom';
