Client. Get tags

--- a/frontend/src/components/admin/shared/tagged-item-form/tagged-item-form.scss
+++ b/frontend/src/components/admin/shared/tagged-item-form/tagged-item-form.scss
@@ -6,6 +6,12 @@
   }
 }
 
+.bottom-form-group {
+  .form-group {
+    margin-bottom: 0;
+  }
+}
+
 .tag-edit-input {
   display: inline-block;
   width: auto;
