--- a/frontend/src/navigation-bar/navigation-bar.scss
+++ b/frontend/src/navigation-bar/navigation-bar.scss
@@ -1,3 +1,7 @@
+.navbar a:hover {
+  text-decoration: none;
+}
+
 .nav-link.dropdown-toggle {
   cursor: pointer;
 }
@@ -21,7 +25,6 @@
   &:hover {
     background-image: linear-gradient(#101112, #17191b 40%, #1b1e20);
     color: #FFF;
-    text-decoration: none;
   }
 
   .r-logout-wording {
