--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -63,6 +63,7 @@
 
 .jumbotron {
   padding: 20px;
+  color: #BFBFBF;
 }
 
 .r-tag-link {
@@ -71,7 +72,6 @@
 
 a {
   color: inherit;
-  display: inline-block;
 
   &:hover {
     color: #FFF;
