--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -1,7 +1,30 @@
+html, body, .r-app {
+  height: 100%;
+}
+
+.r-content {
+  min-height: 100%;
+  box-sizing: border-box;
+  padding-bottom: 56px;
+}
+
+.r-footer {
+  width: 100%;
+  margin-top: -56px;
+
+  .r-footer-content {
+    margin: auto;
+  }
+}
+
 .r-block {
   max-width: 800px;
   margin: 20px auto;
   padding: 10px;
+
+  &.r-item {
+    padding-bottom: 100px;
+  }
 }
 
 .r-button {
